--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,101 +1,91 @@
+.hero {
+  height: 200px;
+  }
 
- /* body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    background-size: cover;
-    font-family: sans-serif;
-  } */
-  /* #overlay {
-    background: rgba(147, 135, 242, 0.9);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-  #cocktail {
-    max-width: 350px;
-    text-align: center;
-    padding: 30px 30px 12px 30px;
-    color: #fff;
-    background-color: #7766d7;
-    border: 4px solid #9387f2;
-    border-radius: 5px;
-  }
-  #cocktail h1 {
-    margin: 0 0 15px 0;
-    text-transform: uppercase;
-  }
-  #cocktail img {
-    max-width: 300px;
-    border: 6px solid #fff;
-    border-radius: 150px;
-  }
-  #cocktail ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  #cocktail li {
-    padding: 15px 0;
-    font-size: 18px;
-  }
-  #cocktail li:not(:last-of-type) {
-    border-bottom: 1px solid #fff;
-  } */
-
-  .hero{
-    height: 400px;
-    background-size: cover;
-    background-image: url("the-8-team-project\assets\Images\multicolored dice.webp");
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 36px;
-  }
-/* Hero Section Styling begin*/
-
-/* .hero {
-    height: 400px;
-    background-size: cover;
-
-    background-image: url("/the-8-team-project/assets/Images/multicolored\ dice.webp");
-    background-position: center;
-    position: relative;
-    text-decoration: rgba(255, 0, 0, 0.623);
-} */
-
-/* .title {
-    padding-top: 25px;
-    text-align: right;
-    color: red;
-    font-size: 50px;
-    font-family: 'Courier New', Courier, monospace;
-} */
-
-.container {
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Courier New', Courier, monospace;
+.margin {
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
-.subtitle {
-    text-align: right;
-    color: whitesmoke;
-    font-family: 'Courier New', Courier, monospace;
+.marginTop {
+  margin-top: 20px;
 }
 
-.card {
-    width: 40%;
-    height: 15vh;
-    object-fit: cover; 
-    display: block;
-    margin: 0 auto;  
+.pad {
+  padding: 15px;
 }
 
-.footer {
-    display: block;
-    margin: 0 auto;
+.txtdecor {
+  text-decoration: none;
 }
 
+#myVideo {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
+.noMarg {
+  margin: 0;
+}
+
+/* Button animation Start */
+
+.btn {
+  width: 150px;
+  height: 50px;
+  border: 1px solid #333;
+  font-family: 'Cinzel', serif;
+  font-size: 20px;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 0;
+  transition: 1s;
+}
+
+.btn::before, .btn::after {
+  position: absolute;
+  background: #eee;
+  z-index: -1;
+  transition: 1s;
+  content: '';
+}
+
+.btn::before {
+  height: 50px;
+  width: 130px;
+}
+
+.btn::after {
+  width: 150px;
+  height: 30px;
+}
+
+.noselect {
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+}
+
+.btn:hover::before {
+  width: 0px;
+  background: #fff;
+}
+
+.btn:hover::after {
+  height: 0px;
+  background: #fff;
+}
+
+.btn:hover {
+  background: #fff;
+}
+
+/* Button animation End */
