--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,8 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-  }
-  #cocktail {
+  } */
+ /* #cocktail {
     max-width: 350px;
     text-align: center;
     padding: 30px 30px 12px 30px;
@@ -45,7 +45,7 @@
   }
   #cocktail li:not(:last-of-type) {
     border-bottom: 1px solid #fff;
-  } */
+  }  
 
   .hero{
     height: 400px;
@@ -53,7 +53,7 @@
     background-image: url("the-8-team-project\assets\Images\multicolored dice.webp");
     font-family: 'Courier New', Courier, monospace;
     font-size: 36px;
-  }
+  } */
 /* Hero Section Styling begin*/
 
 /* .hero {
@@ -85,14 +85,14 @@
     color: whitesmoke;
     font-family: 'Courier New', Courier, monospace;
 }
-
+/* 
 .card {
     width: 40%;
     height: 15vh;
     object-fit: cover; 
     display: block;
     margin: 0 auto;  
-}
+} */
 
 .footer {
     display: block;
