changed the search button style due to some render issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@
   margin: 0;
 }
 
-/* Button animation Start */
+/* Button animation Start 
 
 .btn {
   width: 150px;
@@ -87,5 +87,5 @@
 .btn:hover {
   background: #fff;
 }
-
+*/
 /* Button animation End */
